[package]
name = "egui-multiwin"
version = "0.5.1"
description="A crate that allows for multiple windows with egui"
license = "MIT OR Apache-2.0"
edition = "2018"
publish = ["crates-io"]
repository = "https://github.com/uglyoldbob/egui-multiwin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["egui/serde"]

[dependencies]
arboard = "3.3.2"
async-winit = {git = "https://github.com/uglyoldbob/async-winit.git"}
async-channel = "2.3.1"
egui = { path = "/home/thomas/egui/crates/egui", features = ["async"] }
egui_glow_async = { path = "/home/thomas/egui/crates/egui_glow_async", features = ["rwh_05", "winit", "links"]}
enum_dispatch = "0.3.13"
futures-lite = "2.3.0"
glutin = "0.31.3"
lazy_static = "1.4.0"
rand = "0.8.5"
raw-window-handle-6 = { package = "raw-window-handle", version = "0.6.0" }
raw-window-handle-5 = { package = "raw-window-handle", version = "0.5.2" }
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
